implemented general layout and display scanned images

--- a/Kitodo/src/main/webapp/pages/Metadaten2oben.xhtml
+++ b/Kitodo/src/main/webapp/pages/Metadaten2oben.xhtml
@@ -19,7 +19,7 @@
     xmlns:t="http://myfaces.apache.org/tomahawk"
     >
     <f:view locale="#{SpracheForm.locale}">
-        <ui:include src="/pages/inc/head.xhtml" />
+        <!--<ui:include src="/pages/inc/head.xhtml" />-->
         <h:body>
 
             <h:form id="formularOben">
