--- a/Kitodo/src/main/webapp/pages/incMeta/addMetadataGroup.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/addMetadataGroup.xhtml
@@ -42,61 +42,61 @@
                     </h:selectOneMenu>
                 </td>
             </tr>
-            <t:dataList var="member" value="#{Metadaten.newMetadataGroup.members}"
-                        layout="simple">
-                <ui:fragment rendered="#{member['class'].simpleName != 'RenderablePersonMetadataGroup'}">
-                    <tr>
-                        <td class="eingabeBoxen_row2 mdgroup">
-                            <h:outputText value="#{member.label}:"/>
-                        </td>
-                        <td colspan="2" class="eingabeBoxen_row2 mdgroup">
-                            <h:inputTextarea value="#{member.value}"
-                                             rendered="#{member['class'].simpleName == 'RenderableLineEdit'}"/>
-                            <h:inputText value="#{member.value}"
-                                         rendered="#{member['class'].simpleName == 'RenderableEdit' and not member.readonly}"/>
-                            <h:selectManyListbox value="#{member.selectedItems}"
-                                                 rendered="#{member['class'].simpleName == 'RenderableListBox'}">
-                                <f:selectItems value="#{member.items}"/>
-                            </h:selectManyListbox>
-                            <h:selectOneMenu value="#{member.value}"
-                                             rendered="#{member['class'].simpleName == 'RenderableDropDownList'}">
-                                <f:selectItems value="#{member.items}"/>
-                            </h:selectOneMenu>
-                            <h:outputText id="myOutput" value="#{member.value}"
-                                          rendered="#{member['class'].simpleName == 'RenderableEdit' and member.readonly}"/>
-                        </td>
-                    </tr>
-                </ui:fragment>
-                <t:dataList var="innerMember" value="#{member.members}"
-                            rendered="#{member['class'].simpleName == 'RenderablePersonMetadataGroup'}">
-                    <tr>
-                        <ui:fragment rendered="#{innerMember.first}">
-                            <td rowspan="#{member.rowspan}" class="eingabeBoxen_row2 mdgroup">
-                                <h:outputText value="#{member.label}:"/>
-                            </td>
-                        </ui:fragment>
-                        <td class="eingabeBoxen_row2 mdgroup">
-                            <h:outputText value="#{innerMember.label}:"/>
-                        </td>
-                        <td class="eingabeBoxen_row2 mdgroup">
-                            <h:inputTextarea value="#{innerMember.value}"
-                                             rendered="#{innerMember['class'].simpleName == 'RenderableLineEdit'}"/>
-                            <h:inputText value="#{innerMember.value}"
-                                         rendered="#{innerMember['class'].simpleName == 'RenderableEdit' and not innerMember.readonly}"/>
-                            <h:selectManyListbox value="#{innerMember.selectedItems}"
-                                                 rendered="#{innerMember['class'].simpleName == 'RenderableListbox'}">
-                                <f:selectItems value="#{innerMember.items}"/>
-                            </h:selectManyListbox>
-                            <h:selectOneMenu value="#{innerMember.value}"
-                                             rendered="#{innerMember['class'].simpleName == 'RenderableDropDownList'}">
-                                <f:selectItems value="#{innerMember.items}"/>
-                            </h:selectOneMenu>
-                            <h:outputText id="myOutput" value="#{innerMember.value}"
-                                          rendered="#{innerMember['class'].simpleName == 'RenderableEdit' and innerMember.readonly}"/>
-                        </td>
-                    </tr>
-                </t:dataList>
-            </t:dataList>
+            <!--<t:dataList var="member" value="#{Metadaten.newMetadataGroup.members}"-->
+                        <!--layout="simple">-->
+                <!--<ui:fragment rendered="#{member['class'].simpleName != 'RenderablePersonMetadataGroup'}">-->
+                    <!--<tr>-->
+                        <!--<td class="eingabeBoxen_row2 mdgroup">-->
+                            <!--<h:outputText value="#{member.label}:"/>-->
+                        <!--</td>-->
+                        <!--<td colspan="2" class="eingabeBoxen_row2 mdgroup">-->
+                            <!--<h:inputTextarea value="#{member.value}"-->
+                                             <!--rendered="#{member['class'].simpleName == 'RenderableLineEdit'}"/>-->
+                            <!--<h:inputText value="#{member.value}"-->
+                                         <!--rendered="#{member['class'].simpleName == 'RenderableEdit' and not member.readonly}"/>-->
+                            <!--<h:selectManyListbox value="#{member.selectedItems}"-->
+                                                 <!--rendered="#{member['class'].simpleName == 'RenderableListBox'}">-->
+                                <!--<f:selectItems value="#{member.items}"/>-->
+                            <!--</h:selectManyListbox>-->
+                            <!--<h:selectOneMenu value="#{member.value}"-->
+                                             <!--rendered="#{member['class'].simpleName == 'RenderableDropDownList'}">-->
+                                <!--<f:selectItems value="#{member.items}"/>-->
+                            <!--</h:selectOneMenu>-->
+                            <!--<h:outputText id="myOutput" value="#{member.value}"-->
+                                          <!--rendered="#{member['class'].simpleName == 'RenderableEdit' and member.readonly}"/>-->
+                        <!--</td>-->
+                    <!--</tr>-->
+                <!--</ui:fragment>-->
+                <!--<t:dataList var="innerMember" value="#{member.members}"-->
+                            <!--rendered="#{member['class'].simpleName == 'RenderablePersonMetadataGroup'}">-->
+                    <!--<tr>-->
+                        <!--<ui:fragment rendered="#{innerMember.first}">-->
+                            <!--<td rowspan="#{member.rowspan}" class="eingabeBoxen_row2 mdgroup">-->
+                                <!--<h:outputText value="#{member.label}:"/>-->
+                            <!--</td>-->
+                        <!--</ui:fragment>-->
+                        <!--<td class="eingabeBoxen_row2 mdgroup">-->
+                            <!--<h:outputText value="#{innerMember.label}:"/>-->
+                        <!--</td>-->
+                        <!--<td class="eingabeBoxen_row2 mdgroup">-->
+                            <!--<h:inputTextarea value="#{innerMember.value}"-->
+                                             <!--rendered="#{innerMember['class'].simpleName == 'RenderableLineEdit'}"/>-->
+                            <!--<h:inputText value="#{innerMember.value}"-->
+                                         <!--rendered="#{innerMember['class'].simpleName == 'RenderableEdit' and not innerMember.readonly}"/>-->
+                            <!--<h:selectManyListbox value="#{innerMember.selectedItems}"-->
+                                                 <!--rendered="#{innerMember['class'].simpleName == 'RenderableListbox'}">-->
+                                <!--<f:selectItems value="#{innerMember.items}"/>-->
+                            <!--</h:selectManyListbox>-->
+                            <!--<h:selectOneMenu value="#{innerMember.value}"-->
+                                             <!--rendered="#{innerMember['class'].simpleName == 'RenderableDropDownList'}">-->
+                                <!--<f:selectItems value="#{innerMember.items}"/>-->
+                            <!--</h:selectOneMenu>-->
+                            <!--<h:outputText id="myOutput" value="#{innerMember.value}"-->
+                                          <!--rendered="#{innerMember['class'].simpleName == 'RenderableEdit' and innerMember.readonly}"/>-->
+                        <!--</td>-->
+                    <!--</tr>-->
+                <!--</t:dataList>-->
+            <!--</t:dataList>-->
             <tr>
                 <td class="eingabeBoxen_row3" colspan="3">
                     <h:commandButton action="#{Metadaten.showMetadata}"
