--- a/Kitodo/src/main/webapp/pages/Metadaten2.xhtml
+++ b/Kitodo/src/main/webapp/pages/Metadaten2.xhtml
@@ -17,6 +17,7 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:p="http://primefaces.org/ui"
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
     >
     <f:view locale="#{SpracheForm.locale}">
 
@@ -27,14 +28,18 @@
                 <ui:include src="/pages/Metadaten2oben.xhtml" />
             </p:layoutUnit>
 
-            <p:layoutUnit position="west" resizable="true" size="400" minSize="100" maxSize="600">
+            <p:layoutUnit position="west" resizable="true" size="200" minSize="100" maxSize="600">
                 <ui:include src="/pages/Metadaten3links.xhtml" />
             </p:layoutUnit>
 
             <p:layoutUnit position="center">
-
-                <ui:include src="/pages/Metadaten2rechts.xhtml" />
+                <ui:include src="/pages/Metadaten2rechtsNeu.xhtml" />
             </p:layoutUnit>
+
+            <p:layoutUnit position="east" size="400" resizable="true" header="#{msgs.metadatenBildAnzeigen}" collapsible="true">
+                <ui:include src="/pages/incMeta/Bild.xhtml" />
+            </p:layoutUnit>
+
         </p:layout>
     </f:view>
 </html>
