used same styling for all listWrappers

--- a/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
+++ b/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
@@ -18,7 +18,7 @@
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
-        <p:panel id="ListWrapper">
+        <p:panel id="listWrapper">
             <div style="height: 30px; padding: 1.3em 1.5em;">
                 <h3 style="display: inline; line-height: 30px;">Produktionsvorlagen</h3>
                 <p:button value="Neue Vorlage" outcome="/pages/ProzessverwaltungBearbeiten" icon="fa fa-plus-circle fa-lg" styleClass="button-filled-green" style="float: right; margin-left: 20px; border: 0; font-weight: lighter;"></p:button>
