--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -19,7 +19,7 @@
         xmlns:p="http://primefaces.org/ui"
         >
     <ui:define name="content">
-        <p:panel id="listWrapper" style="width: 95%; margin: auto; border-radius: 5px; padding: 0;">
+        <p:panel id="listWrapper">
             <p:panel style="text-align: left; position: relative; padding: 5px;">
                 <h3 style="display: inline;">Projekte</h3>
                 <p:button outcome="projectEdit" value="#{msgs.newProject}" style="right: 5px; bottom: 5px; position: absolute;" icon="fa fa-plus-circle fa-lg"/>
