--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -22,8 +22,8 @@
         <f:viewAction action="#{ProjekteForm.loadProject}"/>
     </f:metadata>
     <ui:define name="content">
-        <h:form id="projectEditForm">
-            <p:panel id="listWrapper" style="width: 95%; margin: auto; border-radius: 5px; padding: 0;">
+        <p:panel id="listWrapper">
+            <h:form id="projectEditForm">
                 <p:panel style="text-align: left; position: relative; padding: 5px;">
                     <h3 style="display: inline;">Projekt bearbeiten</h3>
                     <h:commandButton value="#{msgs.speichern}" action="#{ProjekteForm.save()}" style="right: 5px; bottom: 5px; position: absolute;" icon="fa fa-floppy-o fa-lg"/>
@@ -39,7 +39,7 @@
                         <ui:include src="projectEditMets.xhtml"/>
                     </p:tab>
                 </p:tabView>
-            </p:panel>
-        </h:form>
+            </h:form>
+        </p:panel>
     </ui:define>
 </ui:composition>
