styled input fields

--- a/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
+++ b/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
@@ -25,7 +25,7 @@
                 <!-- filters -->
                 <h:form style="display: inline; float: right;">
                     <div class="ui-inputgroup">
-                        <p:inputText placeholder="Filter" class="standard-available filter-input"/>
+                        <p:inputText placeholder="Filter" class="filter-input"/>
                         <p:commandButton icon="fa fa-refresh" styleClass="button-blue" style="margin-left: -40px;"/>
                         <p:commandButton id="triggerFilterMenu" icon="fa fa-chevron-down" styleClass="button-filled-blue" style="border: 0; border-radius: 0 3px 3px 0; margin-left: 3px;"/>
                         <p:overlayPanel for="triggerFilterMenu" my="right top" at="right bottom" styleClass="filter-menu">
