--- a/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditSpecification.xhtml
@@ -19,13 +19,9 @@
         <p:row>
             <div>
                 <p:outputLabel for="internalFormat" value="#{msgs.internesSpeicherformat}:" />
-                <p:selectOneMenu id="internalFormat" value="#{ProjekteForm.myProjekt.fileFormatInternal}" style="width:150px">
+                <p:selectOneMenu id="internalFormat" value="#{ProjekteForm.myProjekt.fileFormatInternal}">
                     <f:selectItems value="#{HelperForm.fileFormatsInternalOnly}" />
                 </p:selectOneMenu>
-            </div>
-            <div>
-                <p:outputLabel for="automaticExport" value="#{msgs.automatischerDmsImport}:" />
-                <p:selectBooleanCheckbox id="automaticExport" value="#{ProjekteForm.myProjekt.useDmsImport}" class="input" />
             </div>
             <div>
                 <p:outputLabel for="dmsExportImageDir" value="#{msgs.dmsImportImagesPfad}:" />
@@ -36,6 +32,10 @@
                 <p:inputText id="dmsExportErrorDir" placeholder="Titel" class="input" value="#{ProjekteForm.myProjekt.dmsImportErrorPath}"/>
             </div>
             <div>
+                <p:outputLabel for="automaticExport" value="#{msgs.automatischerDmsImport}:" />
+                <p:selectBooleanCheckbox id="automaticExport" value="#{ProjekteForm.myProjekt.useDmsImport}" class="input" />
+            </div>
+            <div>
                 <p:outputLabel for="timeout" value="#{msgs.timeout}" />
                 <p:inputText id="timeout" placeholder="Titel" class="input" value="#{ProjekteForm.myProjekt.dmsImportTimeOut}"/>
             </div>
@@ -43,7 +43,7 @@
         <p:row>
             <div>
                 <p:outputLabel for="DmsFormat" value="#{msgs.dmsExportformat}" />
-                <p:selectOneMenu id="DmsFormat" value="#{ProjekteForm.myProjekt.fileFormatDmsExport}" style="width:150px">
+                <p:selectOneMenu id="DmsFormat" value="#{ProjekteForm.myProjekt.fileFormatDmsExport}">
                     <f:selectItems value="#{HelperForm.fileFormats}" />
                 </p:selectOneMenu>
             </div>
