--- a/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
+++ b/Kitodo/src/main/webapp/pages/productionTemplates.xhtml
@@ -20,25 +20,25 @@
     <ui:define name="content">
         <p:panel id="listWrapper">
             <p:panel class="content-header">
-                <h3>Produktionsvorlagen</h3>
-                <p:button value="Neue Vorlage" outcome="/pages/ProzessverwaltungBearbeiten" icon="fa fa-plus-circle fa-lg" styleClass="button-filled-green"></p:button>
+                <h3>#{msgs.prozessvorlagen}</h3>
+                <p:button value="#{msgs.eineNeueProzessvorlageAnlegen}" outcome="/pages/ProzessverwaltungBearbeiten" icon="fa fa-plus-circle fa-lg" styleClass="button-filled-green"></p:button>
                 <!-- filters -->
                 <h:form style="display: inline; float: right;">
                     <div class="ui-inputgroup">
-                        <p:inputText placeholder="Filter" class="filter-input"/>
+                        <p:inputText placeholder="#{msgs.filter}" class="filter-input"/>
                         <p:commandButton icon="fa fa-refresh" styleClass="button-blue" style="margin-left: -40px;"/>
                         <p:commandButton id="triggerFilterMenu" icon="fa fa-chevron-down" styleClass="button-filled-blue" style="border: 0; border-radius: 0 3px 3px 0; margin-left: 3px;"/>
                         <p:overlayPanel for="triggerFilterMenu" my="right top" at="right bottom" styleClass="filter-menu">
                             <ul>
                                 <li>
                                     <p:commandLink styleClass="button-filled-blue">
-                                        <i class="fa fa-floppy-o fa-lg"/> Filter speichern
+                                        <i class="fa fa-floppy-o fa-lg"/> #{msgs.addFilter}
                                     </p:commandLink>
                                 </li>
                                 <ui:repeat value="#{ProzessverwaltungForm.userFilters}" var="filter">
                                     <li>
                                         <p:commandLink value="#{filter}"/>
-                                        <p:commandLink styleClass="filter-delete button-blue">
+                                        <p:commandLink title="#{msgs.removeFilter}" styleClass="filter-delete button-blue">
                                             <i class="fa fa-trash-o fa-lg"/>
                                         </p:commandLink>
                                     </li>
@@ -56,7 +56,7 @@
                 <p:column style="width: 50px; text-align: center; color: black;">
                     <!-- header -->
                     <f:facet name="header">
-                            <i class="fa fa-sort-alpha-asc" style="color: rgb(0,109,189);"/>
+                        <i class="fa fa-sort-alpha-asc" style="color: rgb(0,109,189);"/>
                     </f:facet>
                     <!-- content -->
                     <p:commandLink onclick="PF('details-#{template.id}').toggle()" style="color: black;">
@@ -65,17 +65,17 @@
                 </p:column>
 
                 <!-- 2nd column -->
-                <p:column headerText="Titel" style="width: 45%;">
+                <p:column headerText="#{msgs.prozessvorlagen}" style="width: 45%;">
                     <h:outputText value="#{template.title}"/>
                     <p:panel id="details" toggleable="true" closeable="true" widgetVar="details-#{template.id}" collapsed="true">
                         <p:dataTable var="task" value="#{template.tasks}">
-                            <p:column headerText="Nr.">
+                            <p:column headerText="#{msgs.nr}">
                                 <h:outputText value="#{task.ordering}"/>
                             </p:column>
-                            <p:column headerText="Vorgangstitel">
+                            <p:column headerText="#{msgs.title}">
                                 <h:outputText value="#{task.localizedTitle}"/>
                             </p:column>
-                            <p:column headerText="Status">
+                            <p:column headerText="#{msgs.status}">
                                 <h:outputText value="#{task.processingStatus}"/>
                             </p:column>
                         </p:dataTable>
@@ -83,14 +83,14 @@
                 </p:column>
 
                 <!-- 3rd column -->
-                <p:column headerText="Projekt">
+                <p:column headerText="#{msgs.projekt}">
                     <h:outputText value="#{template.project.title}"/>
                 </p:column>
 
                 <!-- 4th column -->
-                <p:column headerText="Aktionen" style="width: 150px;">
+                <p:column headerText="#{msgs.auswahl}" style="width: 150px;">
                     <h:outputText>
-                        <h:link outcome="/pages/ProzessverwaltungBearbeiten" style="color: rgb(0,109,189); padding-right: 10px;">
+                        <h:link outcome="/pages/ProzessverwaltungBearbeiten" title="#{msgs.prozessBearbeiten}" style="color: rgb(0,109,189); padding-right: 10px;">
                             <i class="fa fa-pencil-square-o fa-lg"></i>
                             <f:param name="id" value="#{template.id}"/>
                         </h:link>
