--- a/Kitodo/src/main/webapp/pages/Metadaten2rechtsNeu.xhtml
+++ b/Kitodo/src/main/webapp/pages/Metadaten2rechtsNeu.xhtml
@@ -26,7 +26,7 @@
             <p:commandButton type="button" value="#{msgs.speichernZurueck}" icon="ui-icon-extlink" />
         </div>
 
-        <p:tabView dynamic="true">
+        <p:tabView dynamic="true" style = "height: 100%">
             <p:tab title="#{msgs.paginierung}">
                 <ui:include src="incMeta/PaginierungNeu.xhtml" />
             </p:tab>
