--- a/Kitodo/src/main/webapp/pages/incMeta/NeuMetaNeu.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/NeuMetaNeu.xhtml
@@ -25,8 +25,78 @@
     xmlns:t="http://myfaces.apache.org/tomahawk"
     xmlns:p="http://primefaces.org/ui"
     >
+    <h:panelGroup rendered="#{Metadaten.modeAdd}">
         <h3 style="margin-top:10px">
             <h:outputText value="#{msgs.metadatenBearbeiten}"/>
         </h3>
+        <table id="render" cellpadding="3" cellspacing="0" style="width:540px" class="eingabeBoxen">
+            <tr>
+                <td class="eingabeBoxen_row1">
+                    <h:outputText value="#{msgs.metadatenBearbeiten}"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="eingabeBoxen_row2">
+                    <h:panelGrid id="grid1" columns="2">
+                        <!-- typ -->
+                        <h:outputLabel for="mytyp" value="#{msgs.typ}"/>
+
+                        <h:panelGroup>
+                            <p:selectOneMenu id="mytyp" style="width: 400px;margin-right:15px" value="#{Metadaten.tempTyp}"
+                                             required="true" onchange="loadValue()">
+                                <f:selectItems value="#{Metadaten.addableMetadataTypes}"/>
+                                <p:ajax event="mouseup"/>
+                            </p:selectOneMenu>
+                            <t:message for="mytyp" style="color: red" replaceIdWithLabel="true"/>
+
+                            <p:remoteCommand name="loadValue" update="formular2:render"/>
+
+                        </h:panelGroup>
+
+                        <h:outputLabel for="myValues" value="#{msgs.wert}"/>
+
+                        <h:panelGroup>
+                            <t:div id="myValues">
+
+                                <h:inputTextarea id="myTextarea" value="#{Metadaten.metadatum.value}" immediate="true"
+                                                 rendered="#{(Metadaten.outputType == 'textarea')}"
+                                                 onchange="styleAnpassen(this)" styleClass="metadatenInput"
+                                                 style="width: 350px;height: 45px;">
+                                </h:inputTextarea>
+                                <h:inputText id="myInput" value="#{Metadaten.metadatum.value}"
+                                             onchange="styleAnpassen(this)" rendered="#{(Metadaten.outputType == 'input')}"
+                                             styleClass="metadatenInput" style="width: 350px;"/>
+                                <h:selectManyListbox id="mySelect" value="#{Metadaten.metadatum.selectedItems}"
+                                                     rendered="#{(Metadaten.outputType == 'select')}"
+                                                     onchange="styleAnpassen(this)" immediate="true">
+                                    <f:selectItems value="#{Metadaten.metadatum.items}"/>
+                                </h:selectManyListbox>
+                                <h:selectOneMenu id="mySelect1" value="#{Metadaten.metadatum.selectedItem}"
+                                                 rendered="#{(Metadaten.outputType == 'select1')}"
+                                                 onchange="styleAnpassen(this)" immediate="true">
+                                    <f:selectItems value="#{Metadaten.metadatum.items}"/>
+                                </h:selectOneMenu>
+                                <h:outputText id="myOutput" value="#{Metadaten.metadatum.value}"
+                                              rendered="#{(Metadaten.outputType == 'readonly')}" styleClass="metadatenInput"
+                                              style="width: 350px;"/>
+                            </t:div>
+                        </h:panelGroup>
+                    </h:panelGrid>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="eingabeBoxen_row3">
+                    <h:commandButton action="#{Metadaten.cancel}" value="#{msgs.abbrechen}" immediate="false">
+                        <t:updateActionListener value="huhu"
+                                                property="#{Metadaten.metadatum.value}"/>
+                    </h:commandButton>
+
+                    <t:commandButton id="absenden" forceId="true" type="submit" action="#{Metadaten.save}"
+                                     value="#{msgs.dieAenderungenSpeichern}"/>
+                </td>
+            </tr>
+        </table>
+    </h:panelGroup>
 
 </ui:composition>
