--- a/Kitodo/src/main/webapp/pages/Metadaten2rechtsNeu.xhtml
+++ b/Kitodo/src/main/webapp/pages/Metadaten2rechtsNeu.xhtml
@@ -15,9 +15,8 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
-        xmlns:p="http://primefaces.org/ui"
-        xmlns:t="http://myfaces.apache.org/tomahawk">
-<f:view>
+        xmlns:p="http://primefaces.org/ui">
+
     <h:form>
         <div align="right">
             <p:commandButton type="button" value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" />
@@ -28,7 +27,7 @@
 
         <p:tabView dynamic="true" style = "height: 100%">
             <p:tab title="#{msgs.paginierung}">
-                <ui:include src="incMeta/PaginierungNeu.xhtml" />
+                <ui:include src="incMeta/Paginierung.xhtml" />
             </p:tab>
             <p:tab title="#{msgs.strukturdaten}">
                 <ui:include src="incMeta/StrukturdatenNeu.xhtml" />
@@ -39,5 +38,5 @@
         </p:tabView>
 
     </h:form>
-</f:view>
+
 </ui:composition>
